Increase font size and fix footer overlap

--- a/index.css
+++ b/index.css
@@ -24,7 +24,7 @@ body {
     display: flex;
     flex-direction: column;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.75em;
+    font-size: 0.9em;
     /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
     margin: 0 auto;
     max-width: 960px;
@@ -69,6 +69,7 @@ main {
     text-align: left;
     width: 80vw;
     flex: 1 1 auto;  /*grow vertically*/
+    padding-bottom: 50px;
 }
 
 main.coming-soon {
@@ -233,7 +234,7 @@ header .logo-link {
 
 footer {
     background-color: var(--background);
-    /* position: fixed; */
+    position: fixed;
     bottom: 0;
     max-width: 960px;
     width: 100%;
